--- a/css/main.css
+++ b/css/main.css
@@ -93,7 +93,7 @@ h1 {
    transform: translateY(-50%);
 }
 
-.catalog-of-goods-home {
+.section-default-home {
    padding: 0 24px;
    margin-top: 96px;
 }
@@ -205,4 +205,137 @@ h1 {
    line-height: 1.2;
    letter-spacing: 0.02em;
    color: #fff;
+}
+
+.panel-container {
+   display: flex;
+   overflow: hidden;
+   height: 1080px;
+   border-radius: 32px;
+}
+.panel {
+   background-size: cover;
+   background-position: center;
+   background-repeat: no-repeat;
+   /* border-radius: 0 32px 32px 0; */
+   color: #fff;
+   flex: 0.5;
+   cursor: pointer;
+   position: relative;
+   transition: flex 0.7s cubic-bezier(0.05, 0.6, 0.4, 0.9);
+}
+
+.panel.active {
+   flex: 1;
+}
+.panel.active div {
+   opacity: 1;
+   transition: opacity 0.3s ease-in 0.4s;
+}
+/* @media screen and (max-width: 480px) {
+    .panel-container {
+        position: relative;
+    }
+    .panel {
+        width: 10%;
+        position: relative;
+        height: 80px;
+        top: 0;
+        border: 4px solid #FFF;
+        box-shadow: 0 4px 12px rgba(0,0,0,0.2), 0 16px 20px rgba(0,0,0,0.2);
+        flex: 1;
+    }
+    .panel.active {
+        flex: 1;
+        width: 100%;
+        position: absolute;
+        height: 360px;
+        left: 0;
+        margin: 40px 0 0;
+        z-index: -1;
+        box-shadow: none;
+    }
+} */
+
+.product-card {
+   border-radius: 24px;
+   overflow: hidden;
+   width: fit-content;
+}
+.product-card-image {
+   display: flex;
+   flex-direction: column;
+   padding: 24px 24px 0 0;
+   aspect-ratio: 1;
+   width: 560px;
+}
+
+.product-card_like-btn {
+   margin-left: auto;
+}
+
+.product-card_discription {
+   background: white;
+   padding: 24px;
+}
+.product-card_top-discr {
+   display: flex;
+   justify-content: space-between;
+}
+.product-card_name {
+   font-family: "TT Ramillas Trl", sans-serif;
+   font-weight: 400;
+   font-size: 24px;
+   line-height: 1.3;
+   letter-spacing: 0.01em;
+   color: #1d1d1d;
+}
+.product-card_price {
+   font-family: "Inter", sans-serif;
+   font-weight: 700;
+   font-size: 24px;
+   line-height: 1.3;
+   letter-spacing: 0.01em;
+   text-transform: uppercase;
+   text-align: right;
+   color: #1d1d1d;
+}
+.product-card_price > span {
+   font-weight: 400;
+   font-size: 16px;
+}
+.product-card_subdiscr {
+   font-family: "TT Ramillas Trl", sans-serif;
+   font-weight: 400;
+   font-size: 16px;
+   line-height: 1.3;
+   letter-spacing: 0.01em;
+   color: #1d1d1d;
+}
+
+.product-cards-container {
+   display: flex;
+   gap: 24px;
+   width: max-content;
+}
+.product-cards-overflow-container {
+   width: 100%;
+   overflow-x: auto;
+}
+.product-cards-overflow-container::-webkit-scrollbar {
+   display: none;
+}
+
+.third-section-control-panel {
+   display: flex;
+   justify-content: space-between;
+   margin-top: 32px;
+}
+
+.control-panel_prev-btn {
+   transform: rotate(180deg);
+   margin-right: 24px;
+}
+.unactive {
+   opacity: 0.5;
 }
