--- a/css/main.css
+++ b/css/main.css
@@ -339,3 +339,55 @@ h1 {
 .unactive {
    opacity: 0.5;
 }
+
+.social-webs-flex {
+   display: flex;
+   flex-wrap: wrap;
+   gap: 24px;
+}
+.social-webs-flex_img {
+   width: calc(100% / 6 - 20px);
+   aspect-ratio: 1;
+   background-position: center;
+   background-size: cover;
+   background-repeat: no-repeat;
+   border-radius: 24px;
+}
+
+.social-webs-flex_last {
+   width: calc(100% / 3 - 20px);
+   background-position: center;
+   background-size: contain;
+   background-repeat: no-repeat;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+}
+
+.social-webs-flex_content {
+   display: flex;
+   gap: 8%;
+   align-items: center;
+   justify-content: center;
+   width: 100%;
+   margin-top: 30px;
+}
+.s-w-line {
+   width: 1px;
+   height: 70%;
+   background: black;
+   opacity: 0.24;
+}
+
+.content_sub-text {
+   font-family: "TT Ramillas Trl", sans-serif;
+   font-weight: 400;
+   font-size: 24px;
+   line-height: 1.3;
+   letter-spacing: 0.01em;
+   text-align: center;
+   color: #1d1d1d;
+
+   margin-top: 30px;
+}
