--- a/css/main.css
+++ b/css/main.css
@@ -391,3 +391,170 @@ h1 {
 
    margin-top: 30px;
 }
+
+.reviews-container {
+   display: flex;
+   gap: 24px;
+   width: 75%;
+}
+
+.review-card {
+   background-color: white;
+   padding: 45px 25px 36px 30px;
+   border-radius: 24px;
+   width: calc(100% / 3 - 16px);
+}
+.review_top-block {
+   display: flex;
+   justify-content: space-between;
+}
+.review_name {
+   font-family: "TT Ramillas Trl", sans-serif;
+   font-weight: 400;
+   font-size: 24px;
+   line-height: 1.3;
+   letter-spacing: 0.01em;
+   color: #1d1d1d;
+}
+.review_stars {
+   display: flex;
+   gap: 9px;
+}
+.review_date {
+   font-family: "Inter", sans-serif;
+   font-weight: 400;
+   font-size: 16px;
+   line-height: 1.24;
+   letter-spacing: 0.01em;
+   color: #6d7762;
+
+   margin: 4px 0 50px;
+}
+.review_content {
+   font-family: "Inter", sans-serif;
+   font-weight: 400;
+   font-size: 24px;
+   line-height: 1.24;
+   letter-spacing: 0.01em;
+   color: #1d1d1d;
+}
+
+.link-to-full-review {
+   font-family: "Inter", sans-serif;
+   font-weight: 400;
+   font-size: 16px;
+   line-height: 1.24;
+   letter-spacing: 0.01em;
+   color: #6d7762;
+
+   text-decoration: none;
+   margin-top: 40px;
+   display: block;
+}
+.right-zone-review {
+   width: calc(25% - 24px);
+}
+.get-review {
+   padding: 43px 20px 28px;
+   background-color: white;
+   border-radius: 24px;
+   height: fit-content;
+
+   margin-bottom: 30px;
+}
+
+.reviews-and-leave-feedback-flex {
+   display: flex;
+   justify-content: space-between;
+}
+
+.leave-feedback-top-line {
+   display: flex;
+   align-items: center;
+}
+.feedback-middle-score {
+   margin-left: auto;
+   margin-right: 24px;
+
+   font-family: "TT Ramillas Trl", sans-serif;
+   font-weight: 500;
+   font-size: 72px;
+   text-align: center;
+   color: #1d1d1d;
+}
+
+.score-counter > li {
+   display: flex;
+   align-items: center;
+   margin-top: 16px;
+}
+.review-walue-bar {
+   width: 100%;
+   margin: 0 22px;
+   height: 16px;
+}
+.review-walue-bar_status-5 {
+   background: #6d7762;
+   border-radius: 56px;
+   width: 100%;
+   height: 100%;
+}
+.review-walue-bar_status-4 {
+   background: #6d7762;
+   border-radius: 56px;
+   width: 50%;
+   height: 100%;
+}
+
+.score-counter_starvalue {
+   font-family: "Inter", sans-serif;
+   font-weight: 400;
+   font-size: 24px;
+   line-height: 1.24;
+   letter-spacing: 0.01em;
+   color: #1d1d1d;
+   width: 24px;
+
+   margin-right: 5px;
+}
+.score-counter_counter {
+   font-family: "Inter", sans-serif;
+   font-weight: 700;
+   font-size: 24px;
+   line-height: 1.24;
+   letter-spacing: 0.01em;
+   text-align: right;
+   color: #1d1d1d;
+}
+
+.opacity {
+   opacity: 0.5;
+}
+
+.leave-feedback-text {
+   font-family: "Inter", sans-serif;
+   font-weight: 400;
+   font-size: 24px;
+   line-height: 1.24;
+   letter-spacing: 0.01em;
+   color: #1d1d1d;
+
+   margin-top: 46px;
+}
+.leave-feedback-btn {
+   font-family: "Inter", sans-serif;
+   font-weight: 400;
+   font-size: 24px;
+   line-height: 1.24;
+   letter-spacing: 0.01em;
+   color: #fff;
+
+   background: #ff5151;
+   padding: 16px 32px;
+   border-radius: 24px;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   cursor: pointer;
+   margin-top: 20px;
+}
