--- a/css/main.css
+++ b/css/main.css
@@ -93,7 +93,7 @@ h1 {
    transform: translateY(-50%);
 }
 
-.catalog-of-goods-home {
+.section-default-home {
    padding: 0 24px;
    margin-top: 96px;
 }
@@ -205,4 +205,356 @@ h1 {
    line-height: 1.2;
    letter-spacing: 0.02em;
    color: #fff;
+}
+
+.panel-container {
+   display: flex;
+   overflow: hidden;
+   height: 1080px;
+   border-radius: 32px;
+}
+.panel {
+   background-size: cover;
+   background-position: center;
+   background-repeat: no-repeat;
+   /* border-radius: 0 32px 32px 0; */
+   color: #fff;
+   flex: 0.5;
+   cursor: pointer;
+   position: relative;
+   transition: flex 0.7s cubic-bezier(0.05, 0.6, 0.4, 0.9);
+}
+
+.panel.active {
+   flex: 1;
+}
+.panel.active div {
+   opacity: 1;
+   transition: opacity 0.3s ease-in 0.4s;
+}
+/* @media screen and (max-width: 480px) {
+    .panel-container {
+        position: relative;
+    }
+    .panel {
+        width: 10%;
+        position: relative;
+        height: 80px;
+        top: 0;
+        border: 4px solid #FFF;
+        box-shadow: 0 4px 12px rgba(0,0,0,0.2), 0 16px 20px rgba(0,0,0,0.2);
+        flex: 1;
+    }
+    .panel.active {
+        flex: 1;
+        width: 100%;
+        position: absolute;
+        height: 360px;
+        left: 0;
+        margin: 40px 0 0;
+        z-index: -1;
+        box-shadow: none;
+    }
+} */
+
+.product-card {
+   border-radius: 24px;
+   overflow: hidden;
+   width: fit-content;
+}
+.product-card-image {
+   display: flex;
+   flex-direction: column;
+   padding: 24px 24px 0 0;
+   aspect-ratio: 1;
+   width: 560px;
+}
+
+.product-card_like-btn {
+   margin-left: auto;
+}
+
+.product-card_discription {
+   background: white;
+   padding: 24px;
+}
+.product-card_top-discr {
+   display: flex;
+   justify-content: space-between;
+}
+.product-card_name {
+   font-family: "TT Ramillas Trl", sans-serif;
+   font-weight: 400;
+   font-size: 24px;
+   line-height: 1.3;
+   letter-spacing: 0.01em;
+   color: #1d1d1d;
+}
+.product-card_price {
+   font-family: "Inter", sans-serif;
+   font-weight: 700;
+   font-size: 24px;
+   line-height: 1.3;
+   letter-spacing: 0.01em;
+   text-transform: uppercase;
+   text-align: right;
+   color: #1d1d1d;
+}
+.product-card_price > span {
+   font-weight: 400;
+   font-size: 16px;
+}
+.product-card_subdiscr {
+   font-family: "TT Ramillas Trl", sans-serif;
+   font-weight: 400;
+   font-size: 16px;
+   line-height: 1.3;
+   letter-spacing: 0.01em;
+   color: #1d1d1d;
+}
+
+.product-cards-container {
+   display: flex;
+   gap: 24px;
+   width: max-content;
+}
+.product-cards-overflow-container {
+   width: 100%;
+   overflow-x: auto;
+}
+.product-cards-overflow-container::-webkit-scrollbar {
+   display: none;
+}
+
+.third-section-control-panel {
+   display: flex;
+   justify-content: space-between;
+   margin-top: 32px;
+}
+
+.control-panel_prev-btn {
+   transform: rotate(180deg);
+   margin-right: 24px;
+}
+.unactive {
+   opacity: 0.5;
+}
+
+.social-webs-flex {
+   display: flex;
+   flex-wrap: wrap;
+   gap: 24px;
+}
+.social-webs-flex_img {
+   width: calc(100% / 6 - 20px);
+   aspect-ratio: 1;
+   background-position: center;
+   background-size: cover;
+   background-repeat: no-repeat;
+   border-radius: 24px;
+}
+
+.social-webs-flex_last {
+   width: calc(100% / 3 - 20px);
+   background-position: center;
+   background-size: contain;
+   background-repeat: no-repeat;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+}
+
+.social-webs-flex_content {
+   display: flex;
+   gap: 8%;
+   align-items: center;
+   justify-content: center;
+   width: 100%;
+   margin-top: 30px;
+}
+.s-w-line {
+   width: 1px;
+   height: 70%;
+   background: black;
+   opacity: 0.24;
+}
+
+.content_sub-text {
+   font-family: "TT Ramillas Trl", sans-serif;
+   font-weight: 400;
+   font-size: 24px;
+   line-height: 1.3;
+   letter-spacing: 0.01em;
+   text-align: center;
+   color: #1d1d1d;
+
+   margin-top: 30px;
+}
+
+.reviews-container {
+   display: flex;
+   gap: 24px;
+   width: 75%;
+}
+
+.review-card {
+   background-color: white;
+   padding: 45px 25px 36px 30px;
+   border-radius: 24px;
+   width: calc(100% / 3 - 16px);
+}
+.review_top-block {
+   display: flex;
+   justify-content: space-between;
+}
+.review_name {
+   font-family: "TT Ramillas Trl", sans-serif;
+   font-weight: 400;
+   font-size: 24px;
+   line-height: 1.3;
+   letter-spacing: 0.01em;
+   color: #1d1d1d;
+}
+.review_stars {
+   display: flex;
+   gap: 9px;
+}
+.review_date {
+   font-family: "Inter", sans-serif;
+   font-weight: 400;
+   font-size: 16px;
+   line-height: 1.24;
+   letter-spacing: 0.01em;
+   color: #6d7762;
+
+   margin: 4px 0 50px;
+}
+.review_content {
+   font-family: "Inter", sans-serif;
+   font-weight: 400;
+   font-size: 24px;
+   line-height: 1.24;
+   letter-spacing: 0.01em;
+   color: #1d1d1d;
+}
+
+.link-to-full-review {
+   font-family: "Inter", sans-serif;
+   font-weight: 400;
+   font-size: 16px;
+   line-height: 1.24;
+   letter-spacing: 0.01em;
+   color: #6d7762;
+
+   text-decoration: none;
+   margin-top: 40px;
+   display: block;
+}
+.right-zone-review {
+   width: calc(25% - 24px);
+}
+.get-review {
+   padding: 43px 20px 28px;
+   background-color: white;
+   border-radius: 24px;
+   height: fit-content;
+
+   margin-bottom: 30px;
+}
+
+.reviews-and-leave-feedback-flex {
+   display: flex;
+   justify-content: space-between;
+}
+
+.leave-feedback-top-line {
+   display: flex;
+   align-items: center;
+}
+.feedback-middle-score {
+   margin-left: auto;
+   margin-right: 24px;
+
+   font-family: "TT Ramillas Trl", sans-serif;
+   font-weight: 500;
+   font-size: 72px;
+   text-align: center;
+   color: #1d1d1d;
+}
+
+.score-counter > li {
+   display: flex;
+   align-items: center;
+   margin-top: 16px;
+}
+.review-walue-bar {
+   width: 100%;
+   margin: 0 22px;
+   height: 16px;
+}
+.review-walue-bar_status-5 {
+   background: #6d7762;
+   border-radius: 56px;
+   width: 100%;
+   height: 100%;
+}
+.review-walue-bar_status-4 {
+   background: #6d7762;
+   border-radius: 56px;
+   width: 50%;
+   height: 100%;
+}
+
+.score-counter_starvalue {
+   font-family: "Inter", sans-serif;
+   font-weight: 400;
+   font-size: 24px;
+   line-height: 1.24;
+   letter-spacing: 0.01em;
+   color: #1d1d1d;
+   width: 24px;
+
+   margin-right: 5px;
+}
+.score-counter_counter {
+   font-family: "Inter", sans-serif;
+   font-weight: 700;
+   font-size: 24px;
+   line-height: 1.24;
+   letter-spacing: 0.01em;
+   text-align: right;
+   color: #1d1d1d;
+}
+
+.opacity {
+   opacity: 0.5;
+}
+
+.leave-feedback-text {
+   font-family: "Inter", sans-serif;
+   font-weight: 400;
+   font-size: 24px;
+   line-height: 1.24;
+   letter-spacing: 0.01em;
+   color: #1d1d1d;
+
+   margin-top: 46px;
+}
+.leave-feedback-btn {
+   font-family: "Inter", sans-serif;
+   font-weight: 400;
+   font-size: 24px;
+   line-height: 1.24;
+   letter-spacing: 0.01em;
+   color: #fff;
+
+   background: #ff5151;
+   padding: 16px 32px;
+   border-radius: 24px;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   cursor: pointer;
+   margin-top: 20px;
 }
