--- a/css/main.css
+++ b/css/main.css
@@ -527,10 +527,6 @@ h1 {
    color: #1d1d1d;
 }
 
-.opacity {
-   opacity: 0.5;
-}
-
 .leave-feedback-text {
    font-family: "Inter", sans-serif;
    font-weight: 400;
@@ -557,4 +553,104 @@ h1 {
    justify-content: center;
    cursor: pointer;
    margin-top: 20px;
+}
+
+.viewed-products-container {
+   display: flex;
+   gap: 24px;
+   margin: 0 56px;
+}
+
+.viewed-product {
+   border-radius: 24px;
+   width: 281px;
+   height: 371px;
+   background-color: #fff;
+
+   display: flex;
+   flex-direction: column;
+   justify-content: space-between;
+   position: relative;
+   padding: 16px 15px 24px;
+}
+
+.viewed-product_img {
+   height: 251px;
+}
+.viewed-product_name {
+   font-family: "TT Ramillas Trl", sans-serif;
+   font-weight: 400;
+   font-size: 16px;
+   line-height: 1.3;
+   letter-spacing: 0.01em;
+   color: #1d1d1d;
+}
+.viewed-product_price {
+   display: flex;
+   justify-content: space-between;
+}
+.viewed-product_price-main {
+   font-family: "Inter", sans-serif;
+   font-weight: 700;
+   font-size: 16px;
+   line-height: 1.24;
+   letter-spacing: 0.01em;
+   text-transform: uppercase;
+   color: #1d1d1d;
+}
+.viewed-product_price-main > span {
+   font-weight: 400;
+}
+.viewed-product_price-sub {
+   font-family: "Inter", sans-serif;
+   font-weight: 400;
+   font-size: 16px;
+   line-height: 1.24;
+   letter-spacing: 0.01em;
+   text-transform: uppercase;
+   text-align: right;
+   color: rgba(29, 29, 29, 0.48);
+}
+
+.viewed-product_discont-value {
+   font-family: "Inter", sans-serif;
+   font-weight: 600;
+   font-size: 12px;
+   line-height: 1.3;
+   text-transform: uppercase;
+   color: #fff;
+   background: #000;
+   position: absolute;
+   top: 16px;
+   left: 16px;
+   border-radius: 50%;
+   width: 48px;
+   height: 48px;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+}
+footer {
+   display: flex;
+   width: 100%;
+   aspect-ratio: 192/108;
+}
+.footer_left-side {
+   width: 50%;
+   background-image: url(../assets/content/footer-bg.png);
+}
+.footer_rignt-side {
+   width: 50%;
+}
+/*  */
+
+/* */
+
+/*  */
+
+.opacity {
+   opacity: 0.5;
+}
+.none {
+   display: none;
 }
