--- a/css/main.css
+++ b/css/main.css
@@ -527,10 +527,6 @@ h1 {
    color: #1d1d1d;
 }
 
-.opacity {
-   opacity: 0.5;
-}
-
 .leave-feedback-text {
    font-family: "Inter", sans-serif;
    font-weight: 400;
@@ -557,4 +553,169 @@ h1 {
    justify-content: center;
    cursor: pointer;
    margin-top: 20px;
+}
+
+.viewed-products-container {
+   display: flex;
+   gap: 24px;
+   margin: 0 56px;
+}
+
+.viewed-product {
+   border-radius: 24px;
+   width: 281px;
+   height: 371px;
+   background-color: #fff;
+
+   display: flex;
+   flex-direction: column;
+   justify-content: space-between;
+   position: relative;
+   padding: 16px 15px 24px;
+}
+
+.viewed-product_img {
+   height: 251px;
+}
+.viewed-product_name {
+   font-family: "TT Ramillas Trl", sans-serif;
+   font-weight: 400;
+   font-size: 16px;
+   line-height: 1.3;
+   letter-spacing: 0.01em;
+   color: #1d1d1d;
+}
+.viewed-product_price {
+   display: flex;
+   justify-content: space-between;
+}
+.viewed-product_price-main {
+   font-family: "Inter", sans-serif;
+   font-weight: 700;
+   font-size: 16px;
+   line-height: 1.24;
+   letter-spacing: 0.01em;
+   text-transform: uppercase;
+   color: #1d1d1d;
+}
+.viewed-product_price-main > span {
+   font-weight: 400;
+}
+.viewed-product_price-sub {
+   font-family: "Inter", sans-serif;
+   font-weight: 400;
+   font-size: 16px;
+   line-height: 1.24;
+   letter-spacing: 0.01em;
+   text-transform: uppercase;
+   text-align: right;
+   color: rgba(29, 29, 29, 0.48);
+}
+
+.viewed-product_discont-value {
+   font-family: "Inter", sans-serif;
+   font-weight: 600;
+   font-size: 12px;
+   line-height: 1.3;
+   text-transform: uppercase;
+   color: #fff;
+   background: #000;
+   position: absolute;
+   top: 16px;
+   left: 16px;
+   border-radius: 50%;
+   width: 48px;
+   height: 48px;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+}
+footer {
+   display: flex;
+   width: 100%;
+   aspect-ratio: 192/108;
+   border-radius: 24px;
+   overflow: hidden;
+   margin-top: 96px;
+}
+.footer_left-side {
+   width: 50%;
+   background-image: url(../assets/content/footer-bg.png);
+   background-size: cover;
+
+   padding: 56px;
+
+   display: flex;
+   flex-direction: column;
+   justify-content: space-between;
+}
+.footer_rignt-side {
+   width: 50%;
+   background: #6c6050;
+   padding: 56px 32px;
+   display: flex;
+   flex-wrap: wrap;
+}
+.footer_bold-text {
+   font-family: "Scotch Modern Display", sans-serif;
+   font-weight: 400;
+   font-size: 12px;
+   line-height: 1.33333;
+   letter-spacing: 0em;
+   color: #fff;
+}
+.footer_discription {
+   font-family: "Inter", sans-serif;
+   font-weight: 400;
+   font-size: 12px;
+   line-height: 1.33333;
+   color: rgba(255, 255, 255, 0.48);
+}
+.footer-title {
+   font-family: "TT Ramillas Trl", sans-serif;
+   font-weight: 400;
+   font-size: 24px;
+   line-height: 1;
+   color: #fff;
+   margin-bottom: 48px;
+}
+.footer-u-list > li > a {
+   font-family: "Inter", sans-serif;
+   font-weight: 400;
+   font-size: 16px;
+   line-height: 1.24;
+   color: #fff;
+   text-decoration: none;
+}
+.footer-u-list > li {
+   margin-top: 16px;
+}
+.footer_rignt__ul-box {
+   width: 50%;
+}
+.footer-social-webs,
+.footer-payment {
+   display: flex;
+   gap: 32px;
+   margin-top: auto;
+   width: 50%;
+}
+.footer-u-list .footer-tel > a {
+   font-family: "TT Ramillas Trl", sans-serif;
+   font-weight: 400;
+   font-size: 40px;
+   line-height: 1;
+   color: #fff;
+}
+/*  */
+
+/* */
+
+/*  */
+
+.opacity {
+   opacity: 0.5;
+}
+.none {
+   display: none;
 }
