--- a/css/main.css
+++ b/css/main.css
@@ -223,6 +223,11 @@ h1 {
    cursor: pointer;
    position: relative;
    transition: flex 0.7s cubic-bezier(0.05, 0.6, 0.4, 0.9);
+
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   padding: 32px 0 48px;
 }
 
 .panel.active {
@@ -231,6 +236,106 @@ h1 {
 .panel.active div {
    opacity: 1;
    transition: opacity 0.3s ease-in 0.4s;
+}
+.panel_style-icon {
+   margin-top: 8px;
+}
+.vertical-line {
+   background: #fff;
+   opacity: 0.48;
+   height: -webkit-fill-available;
+   width: 1px;
+   margin-top: 24px;
+}
+.panel_magic-container {
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   margin-top: 48px;
+}
+.panel_magic__point {
+   font-family: "TT Ramillas Trl", sans-serif;
+   font-weight: 400;
+   font-size: 40px;
+   line-height: 1;
+   letter-spacing: 0.02em;
+   text-align: center;
+   color: #fff;
+   height: auto;
+   opacity: 1;
+
+   transition: flex 0.7s cubic-bezier(0.05, 0.6, 0.4, 0.9);
+}
+.panel.active .panel_magic__point {
+   height: 0;
+   opacity: 0;
+}
+
+.panel.active .panel_magic__title {
+   font-family: "TT Ramillas Trl", sans-serif;
+   font-weight: 400;
+   font-size: 40px;
+   line-height: 1.1;
+   letter-spacing: 0.01em;
+   text-align: center;
+   color: #fff;
+   margin-bottom: 24px;
+   margin-top: 0px;
+}
+
+.panel_magic__title {
+   font-family: "Inter", sans-serif;
+   font-weight: 400;
+   font-size: 16px;
+   line-height: 1.24;
+   text-align: center;
+   color: #fff;
+   margin-top: 8px;
+}
+.panel_magic__img {
+   height: 0;
+   transition: 0.7s cubic-bezier(0.05, 0.6, 0.4, 0.9);
+}
+.panel.active .panel_magic__img {
+   height: auto;
+   transition: 0.7s cubic-bezier(0.05, 0.6, 0.4, 0.9);
+}
+.panel_magic__disc {
+   font-family: "Inter", sans-serif;
+   font-weight: 400;
+   font-size: 16px;
+   line-height: 1.375;
+   text-align: center;
+   color: #fff;
+   width: 65%;
+   opacity: 0;
+   height: 0;
+   transition: 0.7s cubic-bezier(0.05, 0.6, 0.4, 0.9);
+}
+.panel.active .panel_magic__disc {
+   opacity: 1;
+   height: auto;
+   margin: 50px 0;
+   transition: 0.7s cubic-bezier(0.05, 0.6, 0.4, 0.9);
+}
+.panel_magic__show-collection {
+   font-family: "Scotch Modern Display", sans-serif;
+   font-weight: 400;
+   font-size: 24px;
+   line-height: 1.1;
+   text-align: center;
+   color: #fff;
+   opacity: 0;
+   height: 0;
+   transition: 0.7s cubic-bezier(0.05, 0.6, 0.4, 0.9);
+}
+.panel.active .panel_magic__show-collection {
+   opacity: 1;
+   height: auto;
+   transition: 0.7s cubic-bezier(0.05, 0.6, 0.4, 0.9);
+   display: flex;
+   align-items: center;
+   gap: 10px;
 }
 /* @media screen and (max-width: 480px) {
     .panel-container {
