--- a/css/main.css
+++ b/css/main.css
@@ -32,6 +32,32 @@ body {
    display: flex;
    flex-direction: column;
 }
+.home-collection {
+   padding: 32px 56px 48px;
+   height: 772px;
+   background-image: url(../assets/content/collection-header.png);
+   background-position: center;
+   background-size: cover;
+   background-repeat: no-repeat;
+
+   display: flex;
+   flex-direction: column;
+   position: relative;
+}
+.home-collection::before {
+   content: "";
+   position: absolute;
+   top: 0;
+   left: 0;
+   width: calc(100%);
+   height: calc(100%);
+   background-color: rgba(0, 0, 0, 0.3);
+   filter: blur(5px);
+   z-index: 0;
+}
+.z-2 {
+   z-index: 2;
+}
 
 .burger-btn {
    margin-right: 216px;
@@ -821,6 +847,94 @@ footer {
    line-height: 1;
    color: #fff;
 }
+/* 2-page */
+.h2-no-margin {
+   margin: 0;
+}
+.base-style-section {
+   padding: 99px 58px 79px;
+   display: flex;
+   flex-wrap: wrap;
+   justify-content: space-between;
+}
+.base-style_block-1,
+.base-style_block-4,
+.base-style_block-2 {
+   font-family: "Inter", sans-serif;
+   font-weight: 400;
+   font-size: 16px;
+   line-height: 1.25;
+   letter-spacing: -0.06em;
+   color: #333;
+   width: calc(50% - 10px);
+}
+.base-style-section_left,
+.base-style-section_right {
+   width: calc(50% - 10px);
+   height: 944px;
+}
+.base-style-section_left-main,
+.base-style-section_right {
+   display: flex;
+   flex-wrap: wrap;
+   flex-direction: column;
+   gap: 20px;
+}
+.base-style-section_left-main {
+   height: calc(100% - 72px);
+}
+.base-style_block {
+   background-position: center;
+   background-size: cover;
+
+   width: calc(50% - 10px);
+   border-radius: 20px;
+}
+.base-style_block-1 {
+   margin: 25px 0 15px;
+}
+.base-style_block-2 {
+   margin-bottom: 40px;
+}
+.base-style_block-4 {
+   margin-top: 20px;
+}
+.base-style_block-3 {
+   height: 491px;
+   margin-top: auto;
+}
+.base-style_block-5 {
+   height: 581px;
+   margin-top: auto;
+}
+.base-style_block-6 {
+   height: 405px;
+   margin-top: 17px;
+}
+.base-style_block-7 {
+   height: 493px;
+}
+.base-style_block-8 {
+   height: 492px;
+   margin-top: 17px;
+}
+.base-style_block-9 {
+   height: 406px;
+}
+.base-style_block-10 {
+   width: 100%;
+   height: 579px;
+   border-radius: 20px;
+   margin: 20px 0 0;
+}
+.base-style-section_right {
+   justify-content: space-between;
+}
+.collection-section {
+   padding: 0 58px;
+   margin-top: 100px;
+}
+
 /*  */
 
 /* */
