--- a/css/main.css
+++ b/css/main.css
@@ -935,6 +935,115 @@ footer {
    margin-top: 100px;
 }
 
+.collection-things-box {
+   display: flex;
+   justify-content: space-between;
+}
+.huge-block {
+   display: flex;
+   flex-direction: column;
+   background: #fff;
+   border-radius: 24px;
+   position: relative;
+   width: calc(33% - 10px);
+}
+.huge_like {
+   position: absolute;
+   top: 24px;
+   right: 34px;
+}
+.huge_down-block {
+   padding: 18px 31px 26px 24px;
+}
+.huge_img {
+   object-fit: cover;
+   object-position: center;
+   border-radius: 24px;
+   aspect-ratio: 588/658;
+}
+.huge-Title-and-price {
+   display: flex;
+   justify-content: space-between;
+}
+.huge_title {
+   font-family: "TT Ramillas Trl", sans-serif;
+   font-weight: 400;
+   font-size: 24px;
+   line-height: 1.3;
+   letter-spacing: 0.01em;
+   color: #1d1d1d;
+}
+.huge_price {
+   font-family: "Inter", sans-serif;
+   font-weight: 700;
+   font-size: 24px;
+   line-height: 1.24;
+   letter-spacing: 0.01em;
+   text-transform: uppercase;
+   color: #1d1d1d;
+}
+.huge_price span {
+   font-weight: 400;
+   font-size: 16px;
+}
+.huge_discription {
+   font-family: "TT Ramillas Trl", sans-serif;
+   font-weight: 400;
+   font-size: 16px;
+   line-height: 1.3;
+   letter-spacing: 0.01em;
+   color: #1d1d1d;
+}
+.small-blocks-container {
+   display: flex;
+   flex-direction: column;
+   justify-content: space-between;
+   width: calc(17% - 20px);
+}
+.small-blocks-container_small-block {
+   display: flex;
+   flex-direction: column;
+   background: #fff;
+   border-radius: 24px;
+   position: relative;
+}
+
+.small-img {
+   border-radius: 24px;
+}
+.small_down-block {
+   padding: 18px 18px 24px 18px;
+}
+.small_title {
+   font-family: "TT Ramillas Trl", sans-serif;
+   font-weight: 400;
+   font-size: 16px;
+   line-height: 1.3;
+   letter-spacing: 0.01em;
+   color: #1d1d1d;
+}
+.small_price {
+   font-family: "Inter", sans-serif;
+   font-weight: 700;
+   font-size: 16px;
+   line-height: 1.3;
+   letter-spacing: 0.01em;
+   text-transform: uppercase;
+   color: #1d1d1d;
+}
+.small_price span {
+   font-weight: 400;
+   font-size: 12px;
+}
+.small_discription {
+   font-family: "TT Ramillas Trl", sans-serif;
+   font-weight: 400;
+   font-size: 12px;
+   line-height: 1.3;
+   letter-spacing: 0.01em;
+   color: #1d1d1d;
+}
+
 /*  */
 
 /* */
