--- a/css/main.css
+++ b/css/main.css
@@ -938,6 +938,7 @@ footer {
 .collection-things-box {
    display: flex;
    justify-content: space-between;
+   margin-top: 48px;
 }
 .huge-block {
    display: flex;
@@ -972,6 +973,10 @@ footer {
    line-height: 1.3;
    letter-spacing: 0.01em;
    color: #1d1d1d;
+
+   overflow: hidden;
+   white-space: nowrap;
+   text-overflow: ellipsis;
 }
 .huge_price {
    font-family: "Inter", sans-serif;
@@ -1006,6 +1011,7 @@ footer {
    background: #fff;
    border-radius: 24px;
    position: relative;
+   height: calc(50% - 10px);
 }
 
 .small-img {
@@ -1021,6 +1027,11 @@ footer {
    line-height: 1.3;
    letter-spacing: 0.01em;
    color: #1d1d1d;
+   /* троеточие (...) и запрет переноса строки */
+   overflow: hidden;
+   white-space: nowrap;
+   text-overflow: ellipsis;
+   /*  */
 }
 .small_price {
    font-family: "Inter", sans-serif;
