--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,6 @@
-* {
+*,
+*::before,
+*::after {
    box-sizing: border-box;
 }
 
@@ -773,7 +775,7 @@ h1 {
 footer {
    display: flex;
    width: 100%;
-   border-radius: 24px;
+   border-radius: 24px 24px 0 0;
    overflow: hidden;
    margin-top: 96px;
    height: 1080px;
@@ -1054,7 +1056,68 @@ footer {
    letter-spacing: 0.01em;
    color: #1d1d1d;
 }
+.accordeon-section {
+   margin: 100px 58px;
+}
 
+.accordion__header {
+   display: flex;
+   flex-wrap: wrap;
+   justify-content: space-between;
+   align-items: center;
+   cursor: pointer;
+   transition: background-color 0.2s ease-out;
+   height: 88px;
+   padding-right: 23px;
+   background-image: url(../assets/icon/underline.svg);
+   background-position: bottom;
+   background-repeat: no-repeat;
+   background-size: contain;
+
+   font-family: "Inter", sans-serif;
+   font-weight: 400;
+   font-size: 26px;
+   line-height: 1;
+   color: #6c6050;
+}
+
+.accordion__header::after {
+   flex-shrink: 0;
+   width: 1.25rem;
+   height: 1.25rem;
+   margin-left: auto;
+   background-image: url("../assets/icon/Vector\ 111.svg");
+   background-repeat: no-repeat;
+   background-size: 1.25rem;
+   content: "";
+   transition: transform 0.2s ease-out;
+}
+
+.accordion__item_show .accordion__header::after,
+.accordion__item_slidedown .accordion__header::after {
+   transform: rotate(-180deg);
+}
+
+.accordion__item:not(.accordion__item_show) .accordion__header {
+   border-bottom-right-radius: 0.25rem;
+   border-bottom-left-radius: 0.25rem;
+}
+
+.accordion__content {
+   padding-top: 40px;
+   width: 75%;
+
+   font-family: "Inter", sans-serif;
+   font-weight: 400;
+   font-size: 16px;
+   line-height: 1.25;
+   letter-spacing: -0.06em;
+   color: #4f4f4f;
+}
+
+.accordion__item:not(.accordion__item_show) .accordion__body {
+   display: none;
+}
 /*  */
 
 /* */
