--- a/css/media.css
+++ b/css/media.css
@@ -347,6 +347,9 @@
    .home-collection {
       padding: 32px 15px 24px;
    }
+   .catalog-header {
+      padding: 32px 15px 24px;
+   }
 }
 
 @media (max-width: 400px) {
