--- a/css/main.css
+++ b/css/main.css
@@ -459,6 +459,10 @@ h1 {
    width: 100%;
    overflow-x: auto;
 }
+.product-cards-overflow-container-catalog {
+   width: calc(100% + 56px);
+   overflow-x: auto;
+}
 .product-cards-overflow-container::-webkit-scrollbar {
    display: none;
 }
@@ -1136,6 +1140,7 @@ footer {
 .filter-box {
    margin-top: 48px;
    display: flex;
+   flex-wrap: wrap;
    gap: 16px;
 }
 
@@ -1213,6 +1218,12 @@ div.cs-select:focus {
 .cs-last > span::after {
    background-image: url(../assets/icon/arrow-drop-white.svg);
 }
+.cs-clear span::after {
+   background-image: url(../assets/icon/coral-close.svg);
+}
+.cs-clear span {
+   color: #ff5151;
+}
 
 .cs-select .cs-selected span::after {
    margin-left: 1em;
@@ -1227,7 +1238,7 @@ div.cs-select:focus {
 .cs-select .cs-options {
    position: absolute;
    overflow: hidden;
-   width: 330px;
+   width: 100%;
    background: #fff;
    visibility: hidden;
    border: 1px solid rgba(29, 29, 29, 0.48);
@@ -1278,7 +1289,156 @@ div.cs-last {
 .cs-last .cs-options {
    width: 100%;
 }
+.catalog-things-section {
+   margin: 24px 0 100px;
+}
+.parent {
+   display: grid;
+   grid-template-columns: repeat(3, 1fr);
+   grid-template-rows: repeat(7, 1fr);
+   grid-column-gap: 24px;
+   grid-row-gap: 24px;
+   width: 100%;
+}
+.small-div {
+   width: calc((100vw - 112px) / 3 - 16px);
+}
 
+.div1 {
+   grid-area: 1 / 1 / 2 / 2;
+}
+.div2 {
+   grid-area: 1 / 2 / 2 / 3;
+}
+.div3 {
+   grid-area: 1 / 3 / 2 / 4;
+}
+.div4 {
+   grid-area: 2 / 1 / 3 / 2;
+}
+.div5 {
+   grid-area: 3 / 1 / 4 / 2;
+}
+.div6 {
+   grid-area: 2 / 2 / 4 / 4;
+}
+.div7 {
+   grid-area: 4 / 1 / 5 / 2;
+}
+.div8 {
+   grid-area: 4 / 2 / 5 / 3;
+}
+.div9 {
+   grid-area: 4 / 3 / 5 / 4;
+}
+.div10 {
+   grid-area: 5 / 1 / 7 / 3;
+}
+.div11 {
+   grid-area: 5 / 3 / 6 / 4;
+}
+.div12 {
+   grid-area: 6 / 3 / 7 / 4;
+}
+.div13 {
+   grid-area: 7 / 1 / 8 / 2;
+}
+.div14 {
+   grid-area: 7 / 2 / 8 / 3;
+}
+.div15 {
+   grid-area: 7 / 3 / 8 / 4;
+}
+
+.catalog-mid-block {
+   background: #fff;
+   border-radius: 24px;
+   position: relative;
+   height: 100%;
+
+   display: flex;
+   flex-direction: column;
+}
+.catalog-mid_img {
+   width: 100%;
+   object-fit: cover;
+   object-position: center;
+   aspect-ratio: 578/560;
+   border-radius: 24px;
+}
+.catalog-mid_down-block {
+   padding: 24px;
+   width: 100%;
+   margin-top: auto;
+}
+.catalog-mid-Title-and-price {
+   display: flex;
+   justify-content: space-between;
+}
+
+.catalog-mid_like {
+   position: absolute;
+   top: 24px;
+   right: 24px;
+}
+.crop-img {
+   width: 85%;
+   margin: auto;
+}
+.catalog-huge-img {
+   height: 93%;
+}
+.exclusive-point {
+   position: relative;
+}
+.exclusive-point::after {
+   content: "";
+   width: 160px;
+   height: 160px;
+   position: absolute;
+   right: 0;
+   top: -30px;
+   margin-left: auto;
+   background-image: url(../assets/content/exclusive.png);
+   background-size: cover;
+}
+
+.in-basket {
+   display: flex;
+   justify-content: space-between;
+   background: #fff888;
+}
+
+.filter-buttons {
+   display: flex;
+   width: 100%;
+   margin: 20px 0;
+   gap: 20px;
+
+   font-family: "Inter", sans-serif;
+   font-weight: 500;
+   font-size: 16px;
+   color: #fff;
+}
+.filter-btn-catalog-1 {
+   width: calc(50% - 10px);
+   border-radius: 14px;
+   height: 53px;
+   border: none;
+   background: #6d7762;
+   color: #fff;
+}
+.filter-btn-catalog-2 {
+   width: calc(50% - 10px);
+   border-radius: 14px;
+   height: 53px;
+   border: 1px solid #6c6050;
+   color: #6c6050;
+   background: #f8f3ed;
+}
+.section-m-50 {
+   margin: 50px 0;
+}
 /*  */
 
 /* */
