--- a/css/main.css
+++ b/css/main.css
@@ -1601,6 +1601,7 @@ div.cs-last {
    display: flex;
    align-items: center;
    gap: 24px;
+   margin-top: 40px;
 }
 .right-p-p_control__to-cart {
    font-family: "Inter", sans-serif;
@@ -1701,6 +1702,88 @@ div.cs-last {
    letter-spacing: 0.01em;
    color: #1d1d1d;
 }
+.p-p-section-2 {
+   display: flex;
+   flex-wrap: wrap;
+   margin-top: 96px;
+   gap: 24px;
+}
+
+.product-interior-main-img {
+   width: calc(50% - 12px);
+   background-size: cover;
+   background-repeat: no-repeat;
+   background-position: center;
+   aspect-ratio: 892/933;
+   border-radius: 24px;
+}
+.more-products-interior {
+   width: calc(50% - 12px);
+}
+
+.more-products-interior_product-box {
+}
+.more-products-interior_product {
+   display: flex;
+   align-items: center;
+   padding: 16px;
+   border-radius: 16px;
+}
+.interior_product-box__img {
+   margin-right: 24px;
+   border-radius: 8px;
+   object-fit: cover;
+   object-position: center;
+   width: 94px;
+   height: 94px;
+}
+.more-products-interior_product.in-cart {
+   background: #fff888;
+}
+.product-box__text-box___title {
+   font-family: "TT Ramillas Trl", sans-serif;
+   font-weight: 500;
+   font-size: 24px;
+   line-height: 1.3;
+   letter-spacing: 0.01em;
+   color: #1d1d1d;
+}
+.product-box__text-box___subtitle {
+   font-family: "TT Ramillas Trl", sans-serif;
+   font-weight: 400;
+   font-size: 16px;
+   line-height: 1.3;
+   letter-spacing: 0.01em;
+   color: #1d1d1d;
+}
+.interior_product-box__price {
+   margin-left: auto;
+   flex-shrink: 0;
+}
+.product-box__price___price {
+   font-family: "Inter", sans-serif;
+   font-weight: 700;
+   font-size: 24px;
+   line-height: 1.3;
+   letter-spacing: 0.01em;
+   text-transform: uppercase;
+   text-align: right;
+   color: #1d1d1d;
+}
+.product-box__price___price span {
+   font-weight: 400;
+   font-size: 16px;
+}
+.product-box__price___price-old {
+   font-family: "Inter", sans-serif;
+   font-weight: 400;
+   font-size: 16px;
+   line-height: 1.24;
+   letter-spacing: 0.01em;
+   text-decoration: line-through;
+   text-align: right;
+   color: #1d1d1d;
+}
 /*  */
 
 /* */
@@ -1709,6 +1792,9 @@ div.cs-last {
 
 .opacity {
    opacity: 0.5;
+}
+.zero-opacity {
+   opacity: 0;
 }
 .none {
    display: none;
