--- a/css/main.css
+++ b/css/main.css
@@ -1992,6 +1992,11 @@ div.cs-last {
    font-size: 16px;
    line-height: 1.3;
    color: #1d1d1d;
+
+   overflow: hidden;
+   white-space: nowrap;
+   text-overflow: ellipsis;
+   width: 60%;
 }
 .block_row__price {
    font-family: "Inter", sans-serif;
@@ -2001,6 +2006,7 @@ div.cs-last {
    letter-spacing: 0.01em;
    text-align: right;
    color: #1d1d1d;
+   flex-shrink: 0;
 }
 .block_row__price span {
    font-weight: 400;
@@ -2021,10 +2027,20 @@ div.cs-last {
    margin-bottom: 24px;
 
    font-family: "Inter", sans-serif;
+   font-weight: 700;
+   font-size: 16px;
+   line-height: 1.24;
+   text-transform: uppercase;
+   color: #1d1d1d;
+}
+.promo-imput::placeholder {
+   font-family: "Inter", sans-serif;
    font-weight: 400;
    font-size: 16px;
    line-height: 1.24;
    color: #1d1d1d;
+   opacity: 0.48;
+   text-transform: capitalize;
 }
 .summ-gift {
    margin: 16px 0 24px;
