--- a/css/main.css
+++ b/css/main.css
@@ -2511,7 +2511,6 @@ div.cs-last {
 .hidden-nav-menu {
    display: flex;
    justify-content: space-between;
-   background-color: #f7efe4;
    margin-top: 50px;
 }
 .nav-list {
@@ -2546,10 +2545,17 @@ div.cs-last {
    gap: 32px;
 }
 .burger-nav-menu {
-   padding-top: 32px;
+   padding: 32px 56px 0;
    position: fixed;
    top: -110%;
-   left: 56px;
+   left: 0;
+   width: 100%;
+   transition: 0.6s ease;
+   background-color: #f7efe4;
+   z-index: 150;
+}
+.burger-nav-menu.active {
+   top: 0;
    width: 100%;
 }
 /*  */
