--- a/css/main.css
+++ b/css/main.css
@@ -1952,11 +1952,35 @@ div.cs-last {
    background: #fff888;
 }
 .basket_product__text {
-   width: 55%;
+   width: 85%;
    max-width: 772px;
+   margin-right: auto;
 }
+.basket-product__mid.discont {
+   width: calc(66% + 64px);
+}
+
+.basket-product__mid.target {
+   width: calc(66% - 16px);
+}
+
+.basket-product__mid {
+   display: flex;
+   align-items: center;
+   width: 66%;
+}
+.basket-product__end {
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   flex-grow: 1;
+}
+.buttons-block {
+   display: none;
+}
+
 .basket-product-box.hover .basket_product__text {
-   width: calc(55% - 48px);
+   width: calc(55% - 21px);
    max-width: 724px;
 }
 .basket_product__text-title {
@@ -2562,7 +2586,7 @@ div.cs-last {
 .burger-nav-menu {
    padding: 32px 56px 0;
    position: fixed;
-   top: -110%;
+   top: -150%;
    left: 0;
    width: 100%;
    transition: 0.6s ease;
