--- a/css/main.css
+++ b/css/main.css
@@ -413,6 +413,9 @@ h1 {
    padding: 24px 24px 0 0;
    aspect-ratio: 1;
    width: 560px;
+   background-position: center;
+   background-repeat: no-repeat;
+   background-size: cover;
 }
 
 .product-card_like-btn {
@@ -470,6 +473,9 @@ h1 {
 .product-cards-overflow-container-catalog {
    width: calc(100% + 56px);
    overflow-x: auto;
+}
+.product-cards-overflow-container-catalog::-webkit-scrollbar {
+   display: none;
 }
 .product-cards-overflow-container::-webkit-scrollbar {
    display: none;
@@ -2602,6 +2608,17 @@ div.cs-last {
 .burger-nav-menu.active {
    top: 0;
    width: 100%;
+}
+.pag-line {
+   width: 100%;
+   height: 1px;
+   background: #bebebe;
+   position: relative;
+}
+.pag-line__pag-active {
+   height: 1px;
+   width: 25%;
+   background: #6c6050;
 }
 /*  */
 
