feat: mouse scroll add to swip elements on 3 pages

--- a/css/media.css
+++ b/css/media.css
@@ -597,6 +597,9 @@
    }
 }
 @media (max-width: 800px) {
+   .subtitle-home {
+      margin-bottom: 75px;
+   }
    .parent {
       display: flex;
       flex-direction: column;
