--- a/css/main.css
+++ b/css/main.css
@@ -26,6 +26,7 @@ body {
 .home-nav-menu {
    display: flex;
    justify-content: space-between;
+   align-items: center;
 }
 .home-header {
    padding: 32px 56px 48px;
@@ -521,6 +522,7 @@ h1 {
 .product-cards-overflow-container {
    width: 100%;
    overflow-x: scroll;
+   cursor: grab;
 }
 .product-cards-overflow-container-catalog {
    width: calc(100% + 56px);
@@ -538,7 +540,7 @@ h1 {
    justify-content: space-between;
    margin-top: 32px;
 }
-.control-panel_pag-btns{
+.control-panel_pag-btns {
    display: flex;
 }
 
