--- a/css/main.css
+++ b/css/main.css
@@ -71,6 +71,8 @@ body {
    display: flex;
    align-items: center;
    order: 1;
+   gap: 10px;
+   cursor: pointer;
 }
 .burger-btn-desctop {
    display: flex;
@@ -670,6 +672,12 @@ h1 {
    font-size: 19px;
    font-family: Inter;
    color: #fff;
+   text-transform: uppercase;
+}
+.menu-text-black {
+   font-size: 19px;
+   font-family: Inter;
+   color: #000;
    text-transform: uppercase;
 }
 .right-zone-review {
